[package]
name = "mapper"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
moka = { version = "0.12.10", features = ["sync", "future"] }
reqwest = { version = "0.12", features = ["json", "gzip"] }
axum = "0.8"
axum-extra = { version = "0.10", features = ["typed-routing", "typed-header"] }
headers = "0.4"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
colored = "3.0"